
  * Updated/corrected Tamil translation
    Mugunth <mugunth@thamizha.com>

  * Updated README documentation.
  
  * Made some colors more unique, so that they affected stamps better.
    (e.g., purple and magenta used to look the same when used to tint a stamp)
    Karl Ove Hufthammer <karl@huftis.org>

  * Updated punctuation in many text strings.
    Karl Ove Hufthammer <karl@huftis.org>


2003.Dec.23 (0.9.13)
  * Translated into Basque (eu_ES)
    Juan Irigoien <juanirigoien@irakasle.net>

  * Translated into Norwegian Bokmal (nb_NO)
    Dag H. Loras <dag.loraas@operamail.com>

  * Translated into Tamil (ta_IN)  [buggy]
    Mugunth <mugunth@thamizha.com>

  * Updated Icelandic translation.
    Pjetur G. Hjaltason <pjetur@pjetur.net>

  * Made sure options were in the same order in various places in man page
    and documentation.  Made sure all options and languages were listed.

  * Added stamp controls to mirror, flip and resize stamps before placing
    them.  Some stamps can be set to not be mirror-, flip- or resize-able.
    (Place "noflip" and/or "nomirror" in the stamps' ".dat"
    option files.)  Stamps can have alternative mirror-images (e.g., to
    show a shape the opposite direction, but not have backwards text on it).
    Create "filename_mirror.png" image files.

  * Incorproated high quality filtering code from HiEnd3D,
    http://www.hiend3d.com/hq3x.html
    by Maxim Stepin <maxim@hiend3d.com>

  * Added "--nostampcontrols", "--mirrorstamps" and their opposite options,
    to disable stamp controls, and default to mirrored stamp shapes,
    (or not), respectively.

  * Fixed incorrect tag in HTML documentation.  (Bad results in IE)

  * Fixed typo regarding "savedir" in README.

  * 'printcfg' options not displayed in usage, except on Win32.

  * Moved available language listing to its own usage, shown when
    "--lang" called incorrectly, or as "--lang list" or "--lang help".
    (Suggested by Ben Armstrong)

  * Reorganized usage display